Fix product page issues i.e. price font, spacing, z-index issue

--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -136,7 +136,7 @@
     background: #fff;
     box-shadow: 0px 8px 24px -6px #00000029;
     padding: 50px 30px;
-    z-index: 1;
+    z-index: 20;
     width: 0;
     height: 100%;
     transition: all 0.5s ease-in-out;
